@@ -346,3 +346,4 @@
  26-Apr-2023  V1.709 Fix document pre-purge regex during load, and add regexPurge flag to control running that step
   8-May-2023  V1.710 Fix error handling in PdbxLoader to cause failure when documents fail to load
  19-May-2023  V1.711 Update DNS to PDB archive
+ 23-Sep-2023  V1.712 Add support for pdb_id_u cifType in DataTypeApplicationInfo
